# monasca-log-api

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  ChangeLog  HACKING.rst  Makefile  README.md  README.rst  lower-constraints.txt  pom.xml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
api-guide/source/: conf.py  general_info.rst  index.rst  logs.rst
api-ref/source/: conf.py  healthcheck.inc  http_codes.yaml  index.rst  log.inc  logs.inc  parameters.yaml  version.inc
config-generator/: README.md  monasca-log-api.conf  policy.conf
contrib/: post_test_hook.sh
devstack/: README.md  Vagrantfile  plugin.sh  post_test_hook.sh  settings
devstack/files/: apache-log-api.template
devstack/files/elasticsearch/: elasticsearch.conf  elasticsearch.yml
devstack/files/grafana/: grafana.py
devstack/files/keystone/: create_monasca_log_service.py
devstack/files/kibana/: kibana.conf  kibana.yml
devstack/files/monasca-agent/: elastic.yaml  http_check.yaml  process.yaml
devstack/files/monasca-log-agent/: agent.conf  logstash-output-monasca_log_api-0.3.3.gem  logstash-output-monasca_log_api-0.5.2.gem  logstash-output-monasca_log_api-0.5.gem  monasca-log-agent.conf
devstack/files/monasca-log-api/: log-api-config.conf  log-api-config.ini  monasca-log-api.conf
devstack/files/monasca-log-metrics/: log-metrics.conf  monasca-log-metrics.conf
devstack/files/monasca-log-persister/: monasca-log-persister.conf  persister.conf
devstack/files/monasca-log-transformer/: monasca-log-transformer.conf  transformer.conf
devstack/files/tempest/: tempest.conf
devstack/lib/: config.sh  util.sh
doc/api_samples/v2/: req_json.json
doc/api_samples/v3/: req_global_dims.json  req_multiple_logs.json  req_single_log.json
doc/source/: .gitignore  conf.py  deprecation_note.inc  index.rst  monasca_log_api.api.rst  monasca_log_api.reference.common.rst  monasca_log_api.reference.v2.rst  monasca_log_api.reference.v3.rst  monasca_log_api.rst
doc/source/admin/: index.rst
doc/source/cli/: index.rst
doc/source/configuration/: configuring.rst  files.rst  index.rst  monasca_log_api.rst  options.rst  sample.rst
docker/: Dockerfile  README.rst  build_image.sh  health_check.py  log-api-gunicorn.conf.j2  log-api-paste.ini.j2  start.sh
docs/: monasca-log-api-kafka.md  monasca-log-api-metrics.md  monasca-log-api-spec.md
documentation/: conf.py  index.rst  monasca-log-api-kafka.md  monasca-log-api-metrics.md  monasca-log-api-spec.md  monasca_log_api.api.rst  monasca_log_api.healthcheck.rst  monasca_log_api.middleware.rst  monasca_log_api.monitoring.rst  monasca_log_api.reference.common.rst  monasca_log_api.reference.v3.rst  monasca_log_api.rst  monasca_log_api.v2.common.rst  monasca_log_api.v2.reference.rst  monasca_log_api.v2.rst
etc/monasca/: log-api-config.conf  log-api-config.ini  log-api-logging.conf  log-api-paste.ini  log-api-uwsgi.ini  log-api.conf
java/: pom.xml
monasca_log_api/: .gitignore  README.md  config.py  constants.py  server.py  uri_map.py
monasca_log_api/api/: exceptions.py  headers.py  logs_api.py  logs_v3_api.py  rest_utils.py  versions_api.py
monasca_log_api/app/: api.py  main.py  wsgi.py
monasca_log_api/conf/: __init__.py  monitoring.py  role_middleware.py
monasca_log_api/healthcheck/: kafka_check.py  keystone_protocol.py
monasca_log_api/middleware/: keystone_context_filter.py  role_middleware.py
monasca_log_api/monitoring/: client.py
monasca_log_api/policies/: __init__.py  healthchecks.py  logs.py  versions.py
monasca_log_api/publisher/: exceptions.py  kafka_publisher.py  publisher.py
monasca_log_api/reference/: healthchecks.py  versions.py
monasca_log_api/tests/: base.py  test_config.py  test_healthchecks.py  test_kafka_check.py  test_kafka_publisher.py  test_keystone_protocol.py  test_log_processor.py  test_log_publisher.py  test_logs.py  test_logs_v3.py  test_monitoring.py  test_policy.py  test_request.py  test_rest_utils.py  test_role_middleware.py  test_service.py  test_v2_v3_compare.py  test_version.py  test_versions.py
monasca_log_api/wsgi/: monasca_log_api.py
monasca_log_api_tempest/: README.md  clients.py  config.py  plugin.py
monasca_log_api_tempest/contrib/: post_test_hook.sh
monasca_log_api_tempest/services/: log_api_client.py  log_api_v2_client.py  log_api_v3_client.py  log_search_client.py
monasca_log_api_tempest/tests/: base.py
playbooks/: docker-publish.yml
releasenotes/notes/: cli_args-6dc5e2d13337b871.yaml  deprecate-60181d946200dff7.yaml  drop-py-2-7-02f3af38da6f6634.yaml  os-docs-bf79803595ac884b.yaml  oslo-policy-e142fa9243a8dcf6.yaml  osloconfiggen-d8a0f0a8d1acb961.yaml  project_tree-3a041cbffc83595a.yaml  use-standard-config-path-f47c856009b6410d.yaml  uwsgi-0bf04f0ecd9c7522.yaml  zuul_v3-b4138cd73cb6117a.yaml
releasenotes/source/: conf.py  index.rst
tools/: bashate.sh
(+93 files in other folders)
