[metadata]
name = monasca-log-api
summary = Monasca API for sending log entries
description-file =
    README.md
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://github.com/openstack/monasca-log-api
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    monasca_log_api
    monasca_log_api_tempest

data_files =
    etc/monasca =
        etc/monasca/log-api.conf
        etc/monasca/log-api-paste.ini
        etc/monasca/log-api-logging.conf

[entry_points]
console_scripts =
    monasca-log-api = monasca_log_api.app.main:main

wsgi_scripts =
    monasca-log-api-wsgi = monasca_log_api.app.wsgi:main

tempest.test_plugins =
    monasca_log_api_tests = monasca_log_api_tempest.plugin:MonascaLogApiTempestPlugin

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1

[pbr]
warnerrors = True
