[metadata]
name = monasca-log-api
summary = Monasca API for sending log entries
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/monasca-log-api/latest/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    monasca_log_api

data_files =
    etc/monasca =
        etc/monasca/log-api-paste.ini
        etc/monasca/log-api-logging.conf

[entry_points]
console_scripts =
    monasca-log-api = monasca_log_api.app.main:main

wsgi_scripts =
    monasca-log-api-wsgi = monasca_log_api.app.wsgi:main

oslo.config.opts =
    monasca_log_api = monasca_log_api.conf:list_opts

oslo.policy.policies =
    monasca_log_api = monasca_log_api.policies:list_rules

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[pbr]
autodoc_index_modules = True
autodoc_exclude_modules =
    monasca_log_api.app.wsgi*
    # NOTE(trebskit) we cannot document that because of side-effect
    # of trying to load entire application and inability to find
    # config files.
    monasca_log_api.tests.*
    monasca_log_api_tempest.*
api_doc_dir = contributor/api
